ecmascript/parser/tests/test262-error-references/fail/73c84046ac613107.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/73c84046ac613107.js:1:2
  |
1 | "\ux";
  |  ^^

